--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">lab3</string>
+    <string name="playerInfo">Type your name:</string>
     <string-array name="rps">
         <item>Rock</item>
         <item>Paper</item>
